--- a/index.html
+++ b/index.html
@@ -261,20 +261,6 @@
             <div class="row">
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/jenny-tomei.webp" class="avatar" alt="Jenny Tomei">
-                        <p><strong><em>Jenny Tomei,<br>Founder, JenUp</em></strong></p>
-                        <div class="stars">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                        </div>
-                        <p>Sybil is absolutely amazing to work with, she helped me build an e-learning platform for my website, and she took the time to explain everything to me on how to use it. She's very professional, approachable and always very proficient.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="testimonial-card">
                         <img src="images/gary-parker.webp" class="avatar" alt="Gary Parker">
                         <p><strong><em>Gary Parker,<br>Managing Director, CNT Associates</em></strong></p>
                         <div class="stars">
@@ -299,6 +285,20 @@
                             <img class="star" src="images/star.png">
                         </div>
                         <p>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="testimonial-card">
+                        <img src="images/jenny-tomei.webp" class="avatar" alt="Jenny Tomei">
+                        <p><strong><em>Jenny Tomei,<br>Founder, JenUp</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
+                        <p>Sybil is absolutely amazing to work with, she helped me build an e-learning platform for my website, and she took the time to explain everything to me on how to use it. She's very professional, approachable and always very proficient.</p>
                     </div>
                 </div>
             </div>
@@ -366,7 +366,7 @@
         </div>
         <div class="partners section center grey">
             <div class="container-1140">
-                <h2>Whom We Partner With</h2>
+                <h2>Our Partners</h2>
                 <hr>
                 <div class="row">
                     <div class="col-2-4">
