Update case studies

--- a/bexley-linkup.html
+++ b/bexley-linkup.html
@@ -181,7 +181,7 @@ permalink: /bexley-linkup/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/bexley-linkup.jpg" alt="Bexley Linkup">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website design and development</li>
+                    <li><a href="https://sybiltec.com/website-design/">Website design and development</a></li>
                     <li>Mailchimp email marketing setup</li>
                     <li>Google Analytics Setup</li>
                     <li>Google Search Console submission</li>
