--- a/cnt-associates.html
+++ b/cnt-associates.html
@@ -181,7 +181,7 @@ permalink: /cnt-associates/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/CNT-Associates-2.jpg" alt="CNT Associates">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website development</li>
+                    <li><a href="https://sybiltec.com/website-design/">Website development</a></li>
                     <li>WooCommerce setup</li>
                     <li>Google Analytics setup</li>
                     <li>Google Search Console submission</li>
