--- a/crazy-thumbs.html
+++ b/crazy-thumbs.html
@@ -181,7 +181,7 @@ permalink: /crazy-thumbs/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website development (Shopify)</li>
+                    <li><a href="https://sybiltec.com/ecommerce-websites/">Website development (Shopify)</a></li>
                     <li>Advanced navigation</li>
                     <li>Loyalty programme setup</li>
                     <li>Sound effects</li>
