--- a/fortis-dpc.html
+++ b/fortis-dpc.html
@@ -181,13 +181,13 @@ permalink: /fortis-dpc/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website redesign</li>
+                    <li><a href="https://sybiltec.com/web-design-surrey/">Website redesign</a></li>
                     <li>WooCommerce setup</li>
                     <li>Google Analytics setup</li>
                     <li>Google Search Console submission</li>
                 </ul>
                 <h2>Delivering Peace of Mind</h2>
-                <p>Fortis DPC are your experts in data protection compliance, GDPR, ISO and cyber security solutions. Based in Downside, Surrey, they offer services to schools, churches, charities and businesses of all sizes.</p>
+                <p>Fortis DPC are your experts in cyber security, PCI DSS, data protection compliance, GDPR and ISO compliance. Based in Downside, Surrey, they offer services to schools, churches, charities and businesses of all sizes.</p>
                 <p>The client's biggest complaint with their previous website was the excessive use of blue, creating a cold and corporate feel which did not accurately reflect the company's values. They wanted the website to be "simple, navigable and to instil confidence." Finally, the new website's design needed to represent the company's name, <em>Fortis</em>, which is the Latin word for 'strong'.</p>
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/fortis-dpc.com_homepage.png" alt="Fortis DPC old homepage">
                 <h2>A New Identity</h2>
