--- a/happily-clappily-ever-laughter.html
+++ b/happily-clappily-ever-laughter.html
@@ -181,7 +181,7 @@ permalink: /happily-clappily-ever-laughter/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website design and development</li>
+                    <li><a href="https://sybiltec.com/website-design/">Website design and development</a></li>
                     <li>Google Analytics setup</li>
                     <li>Google Search Console submission</li>
                 </ul>
