--- a/jenup.html
+++ b/jenup.html
@@ -181,7 +181,7 @@ permalink: /jenup/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/jenup-courses.jpg" alt="JenUp courses">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website design</li>
+                    <li><a href="https://sybiltec.com/small-business-web-design/">Website design</a></li>
                     <li>LearnDash setup</li>
                     <li>Group Registration plugin setup</li>
                     <li>WooCommerce setup</li>
