--- a/nerowireart.html
+++ b/nerowireart.html
@@ -181,7 +181,7 @@ permalink: /nerowireart/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="NeroWireArt">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website design and development
+                    <li><a href="https://sybiltec.com/small-business-web-design/">Website design and development</a></li>
                     <li>Google Analytics setup</li>
                     <li>Google Search Console submission</li>
                         
