--- a/lcg-lift-consultancy.html
+++ b/lcg-lift-consultancy.html
@@ -181,7 +181,7 @@ permalink: /lcg-lift-consultancy/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website design and development</li>
+                    <li><a href="https://sybiltec.com/website-design/">Website design and development</a></li>
                     <li>Google Analytics setup</li>
                     <li>Google Search Console submission</li>
                     <li>Cookiebot setup</li>
