--- a/new-haw-community-centre.html
+++ b/new-haw-community-centre.html
@@ -181,7 +181,7 @@ permalink: /new-haw-community-centre/
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">
                 <h2>Services Delivered</h2>
                 <ul>
-                    <li>Website redesign</li>
+                    <li><a href="https://sybiltec.com/web-design-surrey/">Website redesign</a></li>
                     <li>LemonBooking integration</li>
                     <li>Google Analytics setup</li>
                     <li>Google Search Console submission</li>
