Update Web Design Bexley

--- a/website-design.html
+++ b/website-design.html
@@ -186,12 +186,12 @@ permalink: /website-design/
                 <p>Running a business can be challenging, but you don't have to do it alone. If you are a small business owner or sole trader based in <a href="https://www.bexley.gov.uk/" target="_blank" rel="noopener noreferrer"><strong>Bexley</strong></a>, and you are seeking help with web design or your digital presence, you may be eligible to receive funded support via the new <em>Talking Business - Business Support</em> programme.</p>
                 <p>The programme, which launched in late 2023, is designed to help create 'good growth' for small businesses across the borough. Talking Business is fully funded by the Government's UK Shared Prosperity Fund (UKSPF).</p>
 
-                <h2>What Support is Available?</h2>
-                <p>I have partnered with <a href="https://www.cntassociates.com/" target="_blank" rel="noopener noreferrer">CNT Associates</a> to deliver support through a variety of formats including webinars, advice sessions (both 1-2-1s and in groups), online resources and networking.</p>
+                <h2>What Support is Available for Your Bexley Business?</h2>
+                <p>We have partnered with <a href="https://www.cntassociates.com/" target="_blank" rel="noopener noreferrer">CNT Associates</a> to deliver support through a variety of formats including webinars, advice sessions (both 1-2-1s and in groups), online resources and networking.</p>
 
                 <p>We cover a range of areas, including financing, websites, e-commerce stores, digital marketing and support for women-led businesses.</p>
                     
-                <p>As a participant in this free programme, you will get 6 hours of business support from our in-house experts. The support that you will receive will be tailored to your specific requirements. We can provide advice and guidance in these areas:</p>
+                <p>As a participant in this free programme, you will get 1 hour of business support from our in-house experts. The support that you will receive will be tailored to your specific requirements. We can provide advice and guidance in these areas:</p>
 
                 <ul>
                     <li>Website reviews</li>
@@ -200,6 +200,7 @@ permalink: /website-design/
                     <li>User experience (UX)</li>
                     <li>Design and branding</li>
                     <li>GDPR compliance</li>
+                    <li>Cyber security</li>
                 </ul>
 
                 <p>In addition to the above, you will also receive:</p>
@@ -214,19 +215,15 @@ permalink: /website-design/
                     <h2>How it Works</h2>
                     <hr>
                     <div class="row padding-top">
-                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Submit your application</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-list-check"></i><p><strong>Complete your Action Plan</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-user-group"></i><p><strong>Complete 6 hours of business support</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Attend a networking event</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-award"></i><p><strong>Receive your certificate</strong></p></div>
-                        <div class="col-2"><i class="fa-solid fa-laptop"></i><p><strong>Get subsidised web design services</strong></p></div>
+                        <div class="col-3"><i class="fa-regular fa-circle-check"></i><p><strong>Submit your application</strong></p></div>
+                        <div class="col-3"><i class="fa-solid fa-list-check"></i><p><strong>Complete your Action Plan</strong></p></div>
+                        <div class="col-3"><i class="fa-solid fa-user-group"></i><p><strong>Complete 1 hour of business support</strong></p></div>
+                        <div class="col-3"><i class="fa-solid fa-laptop"></i><p><strong>Get subsidised web design services</strong></p></div>
                     </div>
                 </div>
 
                 <h2>What You Gain</h2>
-                <p>Once you have attended 6 hours of sessions (these can be 1-2-1 or group sessions, or a combination of both) you will be issued with a Certificate of Completion. You'll also be invited to attend a closing in-person celebratory event where you'll have the opportunity to network with other graduates of the programme.</p>
-
-                <p>You will then be eligible for web design services at a discounted rate - this can be web design and/or development of a website or e-commerce store.</p>
+                <p>Once you have attended the 1-hour session (which can be a 1-2-1 or group session), you will be eligible for web design services at a discounted rate - this can be web design and/or development of a website or e-commerce store.</p>
 
                 <h2>Eligibility for the Programme</h2>
                 <p>To be considered for this programme, your business must be both of the following:</p>
@@ -247,7 +244,7 @@ permalink: /website-design/
                 <div class="container-1140 padding-top padding-bottom">
 
                 <h2>Web Design Clients in Bexley</h2>
-                <p>Take a look at a selection of businesses whom we have worked with previously:</p>
+                <p>Take a look at a selection of businesses whom we have worked with recently:</p>
 
                 <div id="bexley-linkup" class="shadow-box-2">
                     <div class="row-2">
@@ -284,7 +281,7 @@ permalink: /website-design/
                                 <li>Cookiebot setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://prd.lcglifts.co.uk/"
+                                <a class ="btn-secondary" href="https://lcglifts.co.uk/"
                                 target="_blank" rel="noopener noreferrer">LCG Lift Consultancy >></a>
                             </div>
                         </div>
