--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="col-3"><img src="images/clients/lcg-lift-consultancy.webp" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="images/clients/nerowireart.webp" alt="NeroWireArt"><p class="customer">NeroWireArt</p></div>
+                    <div class="col-3"><img src="images/clients/lee-wills-estate-planning.webp" alt="Lee Wills & Estate Planning"><p class="customer">Lee Wills & Estate Planning</p></div>
                     <div class="col-3"><img src="images/clients/new-haw-community-centre.webp" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>   
                     <div class="col-3"><img src="images/clients/tech-diplomacy-academy.webp" alt="Tech Diplomacy Academy"><p class="customer">Tech Diplomacy Academy</p></div>
                     <div class="col-3"><img src="images/clients/techwomen4boards.webp" alt="TechWomen4Boards"><p class="customer">TechWomen4Boards</p></div>
