--- a/lcg-lift-consultancy.html
+++ b/lcg-lift-consultancy.html
@@ -236,7 +236,7 @@ permalink: /lcg-lift-consultancy/
                 <p>We ensured that the website complied with the requirements of the GDPR by installing the Cookiebot CMP (consent management platform) to allow website visitors to manage their cookie preferences, and by including the relevant policies (privacy notice and cookie policy).</p>
 
                 <div class="padding-btn">
-                    <a class="btn-secondary" href="https://prd.lcglifts.co.uk/" target="_blank" rel="noopener noreferrer">View LCG Lift Consultancy &gt;&gt;</a>
+                    <a class="btn-secondary" href="https://lcglifts.co.uk/" target="_blank" rel="noopener noreferrer">View LCG Lift Consultancy &gt;&gt;</a>
                 </div>
             </div>
         </div>
