--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -348,6 +348,10 @@ permalink: /small-business-web-design/
                                 <li>Google Search Console submission</li>
                                 <li>Cookiebot setup</li>
                             </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://lcglifts.co.uk/"
+                                target="_blank" rel="noopener noreferrer">LCG Lift Consultancy >></a>
+                            </div>
                         </div>
                     </div>
                 </div>
