Update page titles

--- a/clients.html
+++ b/clients.html
@@ -31,12 +31,12 @@ permalink: /clients/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Case Studies | Web Designer Erith South East London | Sybiltec</title>       
+        <title>Clients & Case Studies | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybiltec has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of case Studies here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Case Studies | Web Designer Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Clients & Case Studies | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of case studies here." />
         <meta property="og:url" content="https://sybiltec.com/clients/" />
         <meta property="og:site_name" content="Sybiltec" />
