--- a/services.html
+++ b/services.html
@@ -31,11 +31,11 @@ permalink: /services/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Services | London, Kent and Surrey | Sybiltec Web Design</title>       
+        <title>Services | Web Design & Development | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybiltec is much more than a web design agency. We leverage the power of our network to offer a wide range of related services. Contact us today for a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Services | London, Kent and Surrey | Sybiltec Web Design" />
+        <meta property="og:title" content="Services | Web Design & Development | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec is much more than a web design agency. We leverage the power of our network to offer a wide range of related services. Contact us today for a quote." />
         <meta property="og:url" content="https://sybiltec.com/services/" />
         <meta property="og:site_name" content="Sybiltec" />
