--- a/sitemap.html
+++ b/sitemap.html
@@ -31,12 +31,12 @@ permalink: /sitemap/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sitemap | Sybiltec Web Design</title>       
+        <title>Sitemap | Web Design & Development | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sitemap | Sybiltec Web Design" />
+        <meta property="og:title" content="Sitemap | Web Design & Development | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
         <meta property="og:url" content="https://sybiltec.com/sitemap/" />
         <meta property="og:site_name" content="Sybiltec" />
