--- a/website-review.html
+++ b/website-review.html
@@ -31,12 +31,12 @@ permalink: /website-review/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Review | London Surrey Kent | Sybiltec Web Design</title>       
+        <title>Website Review & Audit | Sybiltec Web Design</title>       
         <meta name="Description" content="A website review identifies critical issues with your website and how to rectify them. We can provide you with a PDF report. Get your website audit today.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Review | London Surrey Kent | Sybiltec Web Design" />
+        <meta property="og:title" content="Website Review & Audit | Sybiltec Web Design" />
         <meta property="og:description" content="A website review identifies critical issues with your website and how to rectify them. We can provide you with a PDF report. Get your website audit today." />
         <meta property="og:url" content="https://sybiltec.com/website-review/" />
         <meta property="og:site_name" content="Sybiltec" />
