--- a/404.html
+++ b/404.html
@@ -28,12 +28,12 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Page Not Found | London Web Design & Development | Sybiltec</title>       
+        <title>404 Page Not Found | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or website review.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Page Not Found | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="404 Page Not Found | Sybiltec Web Design" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/404" />
