--- a/blog-3.html
+++ b/blog-3.html
@@ -31,13 +31,13 @@ permalink: /blog-3/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Page 3 | Web Designer in South East London</title>       
+        <title>Blog Page 3 | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog-3/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog Page 3 | Web Designer in Bexley, South East London" />
+        <meta property="og:title" content="Blog Page 3 | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues." />
         <meta property="og:url" content="https://sybiltec.com/blog-3/" />
         <meta property="og:site_name" content="Sybiltec" />
