--- a/blog.html
+++ b/blog.html
@@ -31,13 +31,13 @@ permalink: /blog/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog | Web Designer Erith South East London | Sybiltec</title>       
+        <title>Blog Page 1 | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read our blog posts to keep yourself updated with industry news and company updates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog | Web Designer Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Blog Page 1 | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec provides website design services in the South East London areaa. Read our blog posts to keep yourself updated with industry news and company updates." />
         <meta property="og:url" content="https://sybiltec.com/blog/" />
         <meta property="og:site_name" content="Sybiltec" />
