--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@ permalink: /contact/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact | Web Design Erith, South East London | Sybiltec</title>       
+        <title>Contact Us For a Quote or More Information | Sybiltec Web Design</title>       
         <meta name="Description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or website review.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Contact | Web Design Erith, Bexley, South East London | Sybiltec" />
+        <meta property="og:title" content="Contact Us for a Quote or More Info | Sybiltec Web Design" />
         <meta property="og:description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/contact/" />
         <meta property="og:site_name" content="Sybiltec" />
