--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -31,13 +31,13 @@ permalink: /ecommerce-websites/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>E-commerce Websites | Erith South East London | Sybiltec</title>       
+        <title>E-commerce Website Development | Sybiltec Web Design</title>       
         <meta name="Description" content="An e-commerce website is required for selling products and/or services online. Contact us for an online store built on WooCommerce or Shopify.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/ecommerce-websites/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="E-commerce Websites | Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="E-commerce Website Development | Sybiltec Web Design" />
         <meta property="og:description" content="An e-commerce website is required for selling products and/or services online. Contact us for an online store built on WooCommerce or Shopify." />
         <meta property="og:url" content="https://sybiltec.com/ecommerce-websites/" />
         <meta property="og:site_name" content="Sybiltec" />
