--- a/faqs.html
+++ b/faqs.html
@@ -167,13 +167,13 @@ permalink: /faqs/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FAQs | Web Designer Erith South East London | Sybiltec</title>       
+        <title>FAQs Frequently Asked Questions | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/faqs/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="FAQs | Web Designer Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="FAQs Frequently Asked Questions | Sybiltec Web Design" />
         <meta property="og:description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
         <meta property="og:url" content="https://sybiltec.com/faqs/" />
         <meta property="og:site_name" content="Sybiltec" />
