--- a/projects.html
+++ b/projects.html
@@ -31,12 +31,12 @@ permalink: /projects/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projects | Web Design Erith South East London | Sybiltec</title>    
+        <title>Projects | Sybiltec Web Design</title>    
         <meta name="Description" content="Sybil Mayard has worked on a range of personal projects outside of her web design business. Learn more about VidCareer, Android Poker App and TagNav.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Projects | Web Design Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Projects | Sybiltec Web Design" />
         <meta property="og:description" content="Sybil Mayard has worked on a range of personal projects outside of her web design business. Learn more about VidCareer, Android Poker App and TagNav." />
         <meta property="og:url" content="https://sybiltec.com/projects/" />
         <meta property="og:site_name" content="Sybiltec" />
