--- a/training.html
+++ b/training.html
@@ -31,13 +31,13 @@ permalink: /training/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Workshops | Web Design Erith Bexley South East London | Sybiltec</title>       
+        <title>Training, Workshops & Webinars | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/training/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Workshops | Web Design Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Training, Workshops & Webinars | Sybiltec Web Design" />
         <meta property="og:description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates." />
         <meta property="og:url" content="https://sybiltec.com/training/" />
         <meta property="og:site_name" content="Sybiltec" />
