Add construction web design

--- a/blog-2.html
+++ b/blog-2.html
@@ -276,6 +276,7 @@ permalink: /blog-2/
                     </div>
                     <div class="col-2-4">
                         <p><strong>Some Areas We Cover</strong></p>
+                        <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
