--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -349,7 +349,7 @@ permalink: /small-business-web-design/
                                 <li>Cookiebot setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://lcglifts.co.uk/"
+                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/"
                                 target="_blank" rel="noopener noreferrer">LCG Lift Consultancy >></a>
                             </div>
                         </div>
@@ -541,6 +541,7 @@ permalink: /small-business-web-design/
                     </div>
                     <div class="col-2-4">
                         <p><strong>Some Areas We Cover</strong></p>
+                        <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
