--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -285,6 +285,7 @@ permalink: /6-tips-for-surviving-remote-working/
                     </div>
                     <div class="col-2-4">
                         <p><strong>Some Areas We Cover</strong></p>
+                        <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
