--- a/sitemap.html
+++ b/sitemap.html
@@ -196,14 +196,15 @@ permalink: /sitemap/
                 </ul>
                 <h2>Services</h2>
                 <ul>
+                    <li><a href="https://sybiltec.com/construction-web-design/">Construction Industry Web Design</a></li>
                     <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
                     <li><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training/">Workshops</a></li>
-                    <li><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></li>
+                    <li><a href="https://sybiltec.com/small-business-web-design/">Small Business Web Design</a></li>
                     <li><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></li>
                     <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
                     <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
                     <li><a href="https://sybiltec.com/website-review/">Website Review</a></li>
+                    <li><a href="https://sybiltec.com/training/">Workshops</a></li>
                 </ul>
                 <h2>Case Studies</h2>
                 <ul>
@@ -285,6 +286,7 @@ permalink: /sitemap/
                     </div>
                     <div class="col-2-4">
                         <p><strong>Some Areas We Cover</strong></p>
+                        <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
