--- a/strategies-for-business-success.html
+++ b/strategies-for-business-success.html
@@ -260,11 +260,11 @@ permalink: /strategies-for-business-success/
                 <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
             </div>
             <div class="col-2-4">
-                <p><strong>Some Areas We Cover</strong></p>
-                <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
-                <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
-                <p><a href="https://sybiltec.com/free-workshops-greenwich-borough/">Workshops in Greenwich</a></p>
-            </div>
+                        <p><strong>Some Areas We Cover</strong></p>
+                        <p><a href="https://sybiltec.com/construction-web-design/">Construction Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design in Bexley</a></p>
+                        <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
+                    </div>
             <div class="col-2-4">
                 <p><strong>Get in Touch</strong></p>
                     <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a><br>
@@ -281,19 +281,15 @@ permalink: /strategies-for-business-success/
         </div>
     </div>
     <div class="container-1140 center padding-top padding-bottom">
-        <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-pinterest"></i></a>
-        <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-facebook"></i></a>
-        <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://www.tiktok.com/@sybiltec" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-tiktok"></i></a>
-    </div>
+                <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-pinterest"></i></a>
+                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-x-twitter"></i></a>
+            </div>
     <div class="copyright section center"><p>Copyright &copy;           
         <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
     </div>
