Update social media

--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -97,7 +97,7 @@ permalink: /privacy-notice/
         "@type": "Organization",
         "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
         "url": "https://www.sybiltec.com",
-        "sameAs": ["https://www.instagram.com/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/"],
+        "sameAs": ["https://www.pinterest.co.uk/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec"],
         "logo": "https://sybiltec.com/favicon.png",
         "name": "Sybiltec Web Design",
         "description": "Sybiltec provides web design services to small businesses in the South East London region and surrounding areas. Whether you are looking to build your first website or redesign an existing one, we offer a service that's right for you. Services include: small business websites, e-commerce websites and online learning platforms. We work with Shopify, WordPress, Wix, WooCommerce and LearnDash.",
@@ -180,7 +180,7 @@ permalink: /privacy-notice/
                         Privacy Notice
                     </li>
                 </ol>
-                <p>Last updated: 7 September 2024</p>
+                <p>Last updated: 29 April 2025</p>
                 <h2>Our contact details</h2>
                 <p>Name: Sybiltec Web Design</p>
                 <p>Email: <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a></p>
@@ -197,7 +197,7 @@ permalink: /privacy-notice/
                     <li>Communication data, which means details about communication you have made on our website including any information or other details you have provided in relation to the services you may purchase or request from us.</li>
                     <li>Testimonials or client feedback that we will use to improve service quality.</li>
                     <li>Technical data, which means details about the device(s) you use to access our website including your internet protocol (IP) / MAC address, browser type and version, location, browser plugin types and versions, referrer URL, hostname of the accessing computer, operating system and platform and other technology on the device(s) you use to access this website. This information will not be combined with data from other sources and we do not share such information with third parties other than service providers that we retain to support the operation of our website.</li>
-                    <li>Social media, which means that for your convenience, this website may contain hyperlinks to other websites that are not under our control, including Facebook, Instagram, YouTube, LinkedIn and Pinterest.</li>
+                    <li>Social media, which means that for your convenience, this website may contain hyperlinks to other websites that are not under our control, including Facebook, LinkedIn, Pinterest and X.</li>
                     <li>Usage data, which includes information about how you use our website, products and services. This includes your browsing patterns and information such as how long you might spend on one of our webpages and what you look at and for on our website, the page that referred you to our site and the click stream during your visit to our website, page response times and page interaction information (clicks you make on a page).</li>
                     <li>
                         Profile data, which includes your email address, name and any details you share in the message fields or text boxes on this website.
