--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="clients section container-1140 padding-top">
             <h2 class="center">What We've Done</h2>
                 <hr>
-            <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, legal professionals, wellbeing organisations, creatives, charities and fashion brands. See some examples of our best work below.</p>
+            <p class="center">We've worked with businesses from a wide variety of industry sectors, including consultancies, legal professionals, wellbeing organisations, construction companies, creatives, charities and fashion brands. See some examples of our best work below.</p>
             <div class="padding-top center">
                 <div class="row">
                     <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
@@ -360,7 +360,7 @@
                 </div>
             </div>
             <div class="center padding-bottom padding-top">
-                <a class="btn-secondary" href="https://sybiltec.com/blog/">Read All Articles >></a>   
+                <a class="btn-secondary" href="https://sybiltec.com/blog/">Read All Blog Articles >></a>   
             </div>
         </div>
         </div>
