--- a/construction-web-design.html
+++ b/construction-web-design.html
@@ -182,17 +182,17 @@ permalink: /construction-web-design/
                 <h2>Why Your Construction Company Needs a Website</h2>
                 <p>Having a strong online presence for your construction business is important for many reasons. Here are a few:</p>
                 <ul>
-                    <li>Providing imformation about your services</li>
+                    <li>Providing information about your services</li>
                     <li>Showcasing your past projects</li>
                     <li>Building trust through customer reviews</li>
-                    <li>Generating enquiries, and ultimately</li>
+                    <li>Generating enquiries</li>
                     <li>Growing your business</li>
                 </ul>
                 <p>You may have a presence on a few social media channels, however, these can only take your business so far. Developing a professional website, combined with other channels (social media, email marketing, paid ads etc.), is a far better strategy, which leverages the power of the internet to your advantage.</p>
 
                 <h2>How Sybiltec Web Design Can Help Your Construction Business</h2>
                 
-                <p>Whether you have an existing website which needs redesigning, or you want to develop your first website, we can work with you to create the perfect website for your business. We will ensure that the design aligns with your branding guidelines. Additionally, our excellent copywriting service will ensure that the correct keywords are placed on your website to maximise search enging optimisation (SEO). This is essential for your website to rank high in search results and to reach more potential customers.</p>
+                <p>Whether you have an existing website which needs redesigning, or you want to develop your first website, we can work with you to create the perfect website for your business. We will ensure that the design aligns with your brand, helping you to showcase the uniqueness of your business and stand out from the competition. Additionally, our excellent copywriting service will ensure that the correct keywords are placed on your website to maximise <a href="https://sybiltec.com/improve-website-seo/">search engine optimisation</a> (SEO). This is essential for your website to rank high in search results and to reach more potential customers.</p>
 
                 <p>These are some of the areas we can help with:</p>
                 <ul>
@@ -203,7 +203,7 @@ permalink: /construction-web-design/
                     <li>Tiling contractors</li>
                 </ul>
 
-                <p>So get in touch with us today to find out how we can help you with your <strong>construction industry web design</strong> needs.</p>
+                <p>So <a href="https://sybiltec.com/contact/">get in touch</a> with us today to find out how we can help you with your <strong>construction industry web design</strong> needs.</p>
                 </div>
 
                 </div>
@@ -216,7 +216,7 @@ permalink: /construction-web-design/
                 <div class="main section">
                 <div class="container-1140 padding-top padding-bottom">
                 <h2>Construction Industry Web Design Clients</h2>
-                <p>Sybiltec Web Design has helped construction companies to redesign and redevelop their websites. Tale a look at the examples beow to find out how we have helped a lift consultancy and tiling contractor to improve their online presence.</p>
+                <p>Sybiltec Web Design has helped construction companies to redesign and redevelop their websites. Take a look at our recent projects below to find out how we helped a lift consultancy and tiling contractor to improve their online presence.</p>
 
                 <div id="lcg-lift-consultancy" class="shadow-box-2">
                     <div class="row-2">
@@ -233,8 +233,7 @@ permalink: /construction-web-design/
                                 <li>Cookiebot setup</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/"
-                                target="_blank" rel="noopener noreferrer">LCG Lift Consultancy >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">LCG Lift Consultancy >></a>
                             </div>
                         </div>
                     </div>
@@ -249,7 +248,10 @@ permalink: /construction-web-design/
                             <h2>LD Tiling Contractors</h2>
                             <p><strong>Offering a range of tiling services throughout South East London</strong></p>
                             <ul>
-                                <li>Website design and development</li>
+                                <li>Website redesign and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                                <li>Email migration</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
