--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -209,6 +209,27 @@ permalink: /small-business-web-design/
                 <h2>Web Design Clients</h2>
                 <p>Take a look at the examples below of websites I have designed for past clients. All of these clients benefitted from a bespoke website design which allowed the businesses to showcase their products and services at their best.</p>
 
+                <div id="lcg-lift-consultancy" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
+                        </div>
+                        <div class="col-7">
+                            <h2>LCG Lift Consultancy</h2>
+                            <p><strong>London lift consultants</strong></p>
+                            <ul>
+                                <li>Website redesign and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                                <li>Cookiebot setup</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">LCG Lift Consultancy >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="fortis-dpc" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
@@ -334,28 +355,6 @@ permalink: /small-business-web-design/
                     </div>
                 </div>
 
-                <div id="lcg-lift-consultancy" class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
-                        </div>
-                        <div class="col-7">
-                            <h2>LCG Lift Consultancy</h2>
-                            <p><strong>London lift consultants</strong></p>
-                            <ul>
-                                <li>Website redesign and development</li>
-                                <li>Google Analytics setup</li>
-                                <li>Google Search Console submission</li>
-                                <li>Cookiebot setup</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/"
-                                target="_blank" rel="noopener noreferrer">LCG Lift Consultancy >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div id="ld-tiling-contractors" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
@@ -365,7 +364,10 @@ permalink: /small-business-web-design/
                             <h2>LD Tiling Contractors</h2>
                             <p><strong>Offering a range of tiling services throughout South East London</strong></p>
                             <ul>
-                                <li>Website design and development</li>
+                                <li>Website redesign and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                                <li>Email migration</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
