--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
                     <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
                     <div class="col-3"><img src="images/clients/emrys.webp" alt="Emrys Group International"><p class="customer">Emrys Group International</p></div>
                     <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis Data Protection Compliance</p></div>
-                    <div class="col-3"><img src="images/clients/lcg-lift-consultancy.webp" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
+                    <div class="col-3"><img src="images/clients/ken-chu-videography.webp" alt="Ken Chu Videography"><p class="customer">Ken Chu Videography</p></div>
                 </div>
                 <div class="row">
+                    <div class="col-3"><img src="images/clients/lcg-lift-consultancy.webp" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
                     <div class="col-3"><img src="images/clients/lee-wills-estate-planning.webp" alt="Lee Wills & Estate Planning"><p class="customer">Lee Wills & Estate Planning</p></div>
                     <div class="col-3"><img src="images/clients/new-haw-community-centre.webp" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>   
                     <div class="col-3"><img src="images/clients/tech-diplomacy-academy.webp" alt="Tech Diplomacy Academy"><p class="customer">Tech Diplomacy Academy</p></div>
-                    <div class="col-3"><img src="images/clients/techwomen4boards.webp" alt="TechWomen4Boards"><p class="customer">TechWomen4Boards</p></div>
                 </div>
             </div>
             <div class="center padding-bottom padding-top"><a class="btn-secondary padding-top" href="https://sybiltec.com/clients/">See All Clients >></a></div>
@@ -369,20 +369,23 @@
                 <h2>Our Partners</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-2-4">
+                    <div class="col-2">
                         <img src="https://sybiltec.com/images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates">
                     </div>
-                    <div class="col-2-4">
+                    <div class="col-2">
+                        <img src="images/logos/low-res/cyber-access-network.webp" alt="Proud to be part of the Cyber Access Network">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/logos/low-res/designrush-verified-agency.webp" alt="Designrush.com verified agency">
+                    </div>
+                    <div class="col-2">
                         <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys Group International">
                     </div>
-                    <div class="col-2-4">
+                    <div class="col-2">
                         <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
                     </div>
-                    <div class="col-2-4">
+                    <div class="col-2">
                         <img src="https://sybiltec.com/images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
-                    </div> 
-                    <div class="col-2-4">
-                        <img src="images/logos/low-res/designrush-verified-agency.webp" alt="Verified agency Designrush.com">
                     </div>
                 </div>
             </div>
