Update social media

--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@ permalink: /projects/
         "@type": "Organization",
         "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
         "url": "https://www.sybiltec.com",
-        "sameAs": ["https://www.pinterest.co.uk/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec"],
+        "sameAs": ["https://www.pinterest.co.uk/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec", "https://www.instagram.com/sybiltec", "https://www.youtube.com/@sybiltec"],
         "logo": "https://sybiltec.com/favicon.png",
         "name": "Sybiltec Web Design",
         "description": "Sybiltec provides web design services to small businesses in the South East London region and surrounding areas. Whether you are looking to build your first website or redesign an existing one, we offer a service that's right for you. Services include: small business websites, e-commerce websites and online learning platforms. We work with Shopify, WordPress, Wix, WooCommerce and LearnDash.",
@@ -326,6 +326,10 @@ permalink: /projects/
                     <i class="fa-brands fa-facebook"></i></a>
                 <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="copyright section center"><p>Copyright &copy;           
                 <span id="year"></span> Sybiltec Web Design. ICO registration reference: ZB744424</p>
