Add phone number

--- a/services.html
+++ b/services.html
@@ -382,7 +382,8 @@ permalink: /services/
                     <div class="col-2-4">
                         <p><strong>Get in Touch</strong></p>
                             <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a><br>
-                                The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
+                            <a href="tel:+447768059730">+44 (0) 7768 059730</a><br>
+                                <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>      
